--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,4 +28,8 @@ jobs:
     - run: npm run build --if-present    
     - run: npm test
     - name: build Dockerfront 
-      run: docker build -f Dockerfile.front .
+      run: |
+        docker login rg.fr-par.scw.cloud/exofront -u ${{ secrets.SCALEWAY_CLIENT_ID }} -p ${{ secrets.SCALEWAY_CLIENT_ID }}
+        docker build -t rg.fr-par.scw.cloud/exofront/front:latest -f Dockerfile.front .
+        docker push rg.fr-par.scw.cloud/exofront/front:latest
+        
