--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,7 +29,7 @@ jobs:
     - run: npm test
     - name: build Dockerfront 
       run: |
-        docker login rg.fr-par.scw.cloud/exofront -u ${{ secrets.SCALEWAY_CLIENT_ID }} -p ${{ secrets.SCALEWAY_CLIENT_ID }}
+        echo ${{ secrets.SCALEWAY_CLIENT_SECRET }} |  docker login rg.fr-par.scw.cloud/exofront -u ${{ secrets.SCALEWAY_CLIENT_ID }} --password-stdin 
         docker build -t rg.fr-par.scw.cloud/exofront/front:latest -f Dockerfile.front .
         docker push rg.fr-par.scw.cloud/exofront/front:latest
         
